# ros2_for_beginners_code

./: .gitignore  LICENSE  README.md  depends.repos
.github/workflows/: ci.yml  ci_focal.yml  ci_jammy.yml  foxy.yml  galactic.yml  humble.yml  rolling.yml
ch2/component/ch2_component/: CMakeLists.txt  package.xml
ch2/component/ch2_component/launch/: composition.launch.py
ch2/component/ch2_component/src/: com2.cpp
ch2/launch/ch2_launch/: CMakeLists.txt  package.xml
ch2/logging/ch2_logging_cpp/: CMakeLists.txt  package.xml
ch2/logging/ch2_logging_py/: package.xml  setup.cfg  setup.py
ch2/node/ch2_node_cpp/: CMakeLists.txt  package.xml
ch2/node/ch2_node_cpp/include/ch2_node_cpp/: lifecyclenode2go.hpp  node2go.hpp
ch2/node/ch2_node_cpp/src/: getid.cpp  global_arg.cpp  lifecyclenode2go.cpp  main.cpp  main2.cpp  multilifecyclenode.cpp  multinode.cpp  node2go.cpp
ch2/node/ch2_node_py/: package.xml  setup.cfg  setup.py
ch2/package/ch2_pkg_cpp/: CMakeLists.txt  package.xml
ch2/package/ch2_pkg_cpp/include/ch2_pkg_cpp/: pkg2go.hpp
ch2/package/ch2_pkg_cpp/src/: main.cpp  pkg2go.cpp
ch2/package/ch2_pkg_py/: package.xml  setup.cfg  setup.py
ch2/param/ch2_param_bringup/: package.xml  setup.cfg  setup.py
ch2/param/ch2_param_py/: package.xml  setup.cfg  setup.py
ch2/plugin/ch2_plugin_alpha/: CMakeLists.txt  alpha_defines.xml  package.xml
ch2/plugin/ch2_plugin_alpha/src/: pluginalpha.cpp
ch2/plugin/ch2_plugin_base/: CMakeLists.txt  package.xml
ch2/plugin/ch2_plugin_base/include/ch2_plugin_base/: pluginbase.hpp
ch2/plugin/ch2_plugin_beta/: CMakeLists.txt  beta_defines.xml  package.xml
ch2/plugin/ch2_plugin_main/: CMakeLists.txt  package.xml
ch2/plugin/ch2_plugin_main/src/: withnode.cpp  withoutnode.cpp
ch3/action/ch3_action_cpp/: CMakeLists.txt  package.xml
ch3/action/ch3_action_cpp/include/ch3_action_cpp/: action_server.hpp
ch3/action/ch3_action_cpp/src/: single_node.cpp
ch3/action/ch3_action_interfaces/: CMakeLists.txt  package.xml
ch3/action/ch3_action_py/: package.xml  setup.cfg  setup.py
ch3/ch3_launch/: CMakeLists.txt  package.xml
ch3/ch3_node_cpp/: package.xml
ch3/ch3_node_cpp/src/: chatter.cpp  logtest.cpp
ch3/ch3_node_py/: package.xml
ch3/chatter_bringup/: CMakeLists.txt  package.xml
ch3/component/ch3_component/: CMakeLists.txt  package.xml
ch3/cpp_chatter/src/: lifecycle_chatter.cpp  setdomain.cpp
ch3/interface/ch3_v_interfaces/: CMakeLists.txt  package.xml
ch3/launch/ch3_launch/: package.xml
ch3/launch/ch3_launch/launch/: changed.singlexec.launch.py  mixed.launch.py  multi_exec.launch.py  multi_pkg.launch.py  singlexec.launch.py
ch3/logging/ch3_logging_cpp/: CMakeLists.txt  package.xml
ch3/logging/ch3_logging_cpp/src/: logger_test.cpp  stuck_logger.cpp
ch3/logging/ch3_logging_py/: package.xml  setup.cfg  setup.py
ch3/node/ch3_node_cpp/: CMakeLists.txt  package.xml
ch3/param/: py_soliloquist.yaml
ch3/param/ch3_param_cpp/: CMakeLists.txt  package.xml
ch3/param/ch3_param_cpp/src/: soliloquist.cpp
ch3/plugin/ch3_plugin_base/: CMakeLists.txt  package.xml
ch3/plugin/ch3_plugin_base/include/ch3_plugin_base/: pluginbase.hpp
ch3/plugin/ch3_plugin_beta/: CMakeLists.txt  beta_defines.xml  ch3_plugin_beta.xml  package.xml
ch3/plugin/ch3_plugin_beta/src/: pluginbeta.cpp
ch3/topic/ch3_topic_cpp/: CMakeLists.txt  package.xml
ch3/topic/ch3_topic_cpp/src/: self_node.cpp  sub_node.cpp
ch4/action/ch4_action_py/: package.xml  setup.cfg  setup.py
ch4/action/ch4_action_py/ch4_action_py/: self_node.py
ch4/ch4_bag_cpp/: CMakeLists.txt  package.xml
ch4/ch4_bag_cpp/src/: operatebag.cpp  pubdata.cpp
ch4/ch4_debug_cpp/: CMakeLists.txt  package.xml
ch4/ch4_debug_cpp/launch/: debug.py
ch4/ch4_unittest_cpp/: CMakeLists.txt  package.xml
ch4/service/ch4_service_cpp/: CMakeLists.txt  package.xml
ch4/service/ch4_service_cpp/src/: self_service.cpp  single_node.cpp
ch4/tf2/ch4_tf2_cpp/: CMakeLists.txt  package.xml
ch4/tf2/ch4_tf2_cpp/src/: dynamic_transform.cpp  static_transform.cpp  transform_listener.cpp
ch4/topic/ch4_topic_cpp/: CMakeLists.txt  package.xml
ch4/topic/ch4_topic_cpp/src/: intra_nodes.cpp  loan_pub.cpp  pub_node.cpp  self_node.cpp  sub_node.cpp  sub_statistics.cpp
ch5/: decom.yaml
ch5/action/ch5_action_cpp/: CMakeLists.txt  package.xml
ch5/action/ch5_action_cpp/include/ch5_action_cpp/: action_server.hpp
ch5/action/ch5_action_cpp/src/: self_action.cpp  single_node.cpp
ch5/ch5_bag_cpp/: CMakeLists.txt  package.xml
ch5/ch5_bag_cpp/src/: operatebag.cpp
ch5/ch5_debug_cpp/: CMakeLists.txt  package.xml
ch5/ch5_unittest_cpp/: CMakeLists.txt  package.xml
ch5/ch5_unittest_cpp/include/ch5_unittest_cpp/: monkey.hpp  monkey_raw.hpp
ch5/ch5_unittest_cpp/src/: monkey.cpp  monkey_raw.cpp
ch5/ch5_unittest_cpp/test/: monkey_test.cpp  raw_test.cpp
ch5/compressed/: compressed_0.db3.zstd  metadata.yaml
ch5/diagnostics/ch5_diagnostics_cpp/: CMakeLists.txt  package.xml
ch5/diagnostics/ch5_diagnostics_cpp/launch/: temp_analysis.launch.py
ch5/diagnostics/ch5_diagnostics_cpp/param/: updater.yaml
ch5/diagnostics/ch5_diagnostics_cpp/src/: simple_updater.cpp
ch5/grpc_vendor/: CMakeLists.txt
ch5/interface/ch5_v_interfaces/: CMakeLists.txt  package.xml
ch5/interface/ch5_v_interfaces/msg/: SE3Velocity.msg
ch5/tf2/ch5_tf2_cpp/: CMakeLists.txt  package.xml
ch5/tf2/ch5_tf2_cpp/src/: dynamic_transform.cpp  static_transform.cpp  transform_listener.cpp
ch6/ch6_bag_cpp/: CMakeLists.txt  package.xml
ch6/ch6_bag_cpp/src/: operatebag.cpp  pubdata.cpp
ch6/ch6_debug_cpp/: CMakeLists.txt  package.xml
ch6/ch6_unittest_cpp/: CMakeLists.txt  package.xml
ch6/ch6_unittest_cpp/include/ch6_unittest_cpp/: monkey.hpp
ch6/ch6_unittest_cpp/src/: monkey.cpp
ch6/ch6_unittest_cpp/test/: monkey_test.cpp
ch6/mpg123_vendor/: CMakeLists.txt
ch7/grpc_vendor/: package.xml
ch7/mpg123_vendor/: package.xml
ch7/opencv_vendor/: CMakeLists.txt  package.xml
ch7/test_mpg123/: CMakeLists.txt  package.xml
dockers/: ubuntu.arm64.dockerfile  ubuntu.x64_64.dockerfile
(+138 files in other folders)
