<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ch2_plugin_main</name>
  <version>0.0.1</version>
  <description>Main package for testing plugin</description>
  <maintainer email="nx.tardis@gmail.com">homalozoa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ch2_plugin_alpha</exec_depend>
  <depend>ch2_plugin_base</depend>
  <exec_depend>ch2_plugin_beta</exec_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
