<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ch3_launch</name>
  <version>0.0.1</version>
  <description>ROS 2 launch demo.</description>
  <maintainer email="nx.tardis@gmail.com">homalozoa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ch2_node_cpp</exec_depend>
  <exec_depend>ch3_logging_cpp</exec_depend>
  <exec_depend>ch3_logging_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
